--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 style="background-color:#ffffff; padding: 20px 30px;">
                 <tr>
                   <td width="50%" align="left">
-                    <a
-                      href="https://www.hotjar.com/updates/en/stay-on-top-of-user-metrics-with-the-new-dashboard?utm_source=iterable&utm_medium=email&utm_campaign=june-pru" target="_blank" style="margin: 0; border: 0">
+                    <a href="https://www.hotjar.com/updates/en/stay-on-top-of-user-metrics-with-the-new-dashboard?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
+                      target="_blank" style="margin: 0; border: 0">
                       <img src="./img/dashboard.png" alt="new dashboard" title="new dashboard" width="258"
                         style="display: block; width: 258px; max-width: 100%; border: 0;">
                     </a>
@@ -123,8 +123,8 @@
                 style="background-color:#ffffff; background-color: #FDF1DE; font-family: 'Roboto', Helvetica, Arial, sans-serif; padding: 30px;">
                 <tr>
                   <td align="center">
-                    <a href="https://www.hotjar.com/updates/en/choose-your-hotjar-adventure-with-workspaces?utm_source=iterable&utm_medium=email&utm_campaign=june-pru" style="margin: 0; border: 0"
-                      target="_blank">
+                    <a href="https://www.hotjar.com/updates/en/choose-your-hotjar-adventure-with-workspaces?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
+                      style="margin: 0; border: 0" target="_blank">
                       <img src="./img/workspace.png" alt="Dedicated workspaces" title="Dedicated workspaces" width="540"
                         style="display: block; width: 540px; max-width: 100%; height: auto; border: 0;">
                     </a>
@@ -139,8 +139,8 @@
                       Organize Hotjar so that you only see what’s relevant to your team or project and separate it from
                       what other teams are working on.
                     </p>
-                    <a href="https://www.hotjar.com/updates/en/choose-your-hotjar-adventure-with-workspaces?utm_source=iterable&utm_medium=email&utm_campaign=june-pru" style="margin: 0; border: 0"
-                      target="_blank">
+                    <a href="https://www.hotjar.com/updates/en/choose-your-hotjar-adventure-with-workspaces?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
+                      style="margin: 0; border: 0" target="_blank">
                       <p
                         style=" font-family: 'Roboto', Helvetica, Arial, sans-serif; font-size: 15px; text-decoration: underline; color: #324FBE; margin: 0;">
                         Learn more</p>
@@ -156,8 +156,8 @@
                 style="background-color:#ffffff; padding: 20px 30px;">
                 <tr>
                   <td width="50%" align="left">
-                    <a
-                      href="https://www.hotjar.com/updates/en/see-exactly-what-your-users-see-with-the-latest-recordings-improvements?utm_source=iterable&utm_medium=email&utm_campaign=june-pru" style="margin: 0; border: 0" target="_blank">
+                    <a href="https://www.hotjar.com/updates/en/see-exactly-what-your-users-see-with-the-latest-recordings-improvements?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
+                      style="margin: 0; border: 0" target="_blank">
                       <img src="./img/multi-tab.png" alt="multi-tab" title="multi-tab" width="258"
                         style="display: block; width: 258px; max-width: 100%; border: 0;">
                     </a>
@@ -170,8 +170,8 @@
                       Follow your user’s journey when they open a new tab or window and get a more accurate rendering of
                       your site with the latest Recordings improvements.
                     </p>
-                    <a href="https://www.hotjar.com/updates/en/see-exactly-what-your-users-see-with-the-latest-recordings-improvements?utm_source=iterable&utm_medium=email&utm_campaign=june-pru" style="margin: 0; border: 0"
-                      target="_blank">
+                    <a href="https://www.hotjar.com/updates/en/see-exactly-what-your-users-see-with-the-latest-recordings-improvements?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
+                      style="margin: 0; border: 0" target="_blank">
                       <p
                         style=" font-family: 'Roboto', Helvetica, Arial, sans-serif; font-size: 15px; text-decoration: underline; color: #324FBE; margin: 0;">
                         Learn more</p>
@@ -187,8 +187,8 @@
                 style="background-color:#ffffff; padding: 20px 30px;">
                 <tr>
                   <td width="50%" align="left">
-                    <a
-                      href="https://www.hotjar.com/updates/en/get-better-user-feedback-with-the-latest-improvements-in-hotjar-ask?utm_source=iterable&utm_medium=email&utm_campaign=june-pru" target="_blank" style="margin: 0; border: 0">
+                    <a href="https://www.hotjar.com/updates/en/get-better-user-feedback-with-the-latest-improvements-in-hotjar-ask?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
+                      target="_blank" style="margin: 0; border: 0">
                       <img src="./img/accessibility.png" alt="Ask improvements" title="Ask improvements" width="258"
                         style="display: block; width: 258px; max-width: 100%; border: 0;">
                     </a>
@@ -201,8 +201,8 @@
                       Customize feedback widget text, find essential information first in the survey responses table,
                       and create a more accessible experience for your users.
                     </p>
-                    <a href="https://www.hotjar.com/updates/en/get-better-user-feedback-with-the-latest-improvements-in-hotjar-ask?utm_source=iterable&utm_medium=email&utm_campaign=june-pru" style="margin: 0; border: 0"
-                      target="_blank">
+                    <a href="https://www.hotjar.com/updates/en/get-better-user-feedback-with-the-latest-improvements-in-hotjar-ask?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
+                      style="margin: 0; border: 0" target="_blank">
                       <p
                         style=" font-family: 'Roboto', Helvetica, Arial, sans-serif; font-size: 15px; text-decoration: underline; color: #324FBE; margin: 0;">
                         Learn more</p>
@@ -218,8 +218,8 @@
                 style="background-color:#ffffff; padding: 20px 30px;">
                 <tr>
                   <td width="50%" align="left">
-                    <a
-                      href="https://www.hotjar.com/updates/en/easily-manage-your-user-attributes-with-these-new-improvements?utm_source=iterable&utm_medium=email&utm_campaign=june-pru" style="margin: 0; border: 0" target="_blank">
+                    <a href="https://www.hotjar.com/updates/en/easily-manage-your-user-attributes-with-these-new-improvements?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
+                      style="margin: 0; border: 0" target="_blank">
                       <img src="./img/user-attribute.png" alt="multi-tab" title="multi-tab" width="258"
                         style="display: block; width: 258px; max-width: 100%; border: 0;">
                     </a>
@@ -333,20 +333,20 @@
           </tr>
           <tr>
             <td
-              style="padding: 30px 0 0;Margin:0;border-bottom:1px solid #cccccc;background:none;min-height:1px;width:100%;margin:0px;">
+              style="padding: 30px 0 0; Margin:0;border-bottom:1px solid #cccccc;background:none;min-height:1px;width:100%;margin:0px; background-color: #ffffff;">
             </td>
           </tr>
           <tr>
-            <td style="padding: 30px 0 0; text-align: center;">
+            <td style="padding: 30px 0 ; text-align: center; background-color: #ffffff;">
               <p
                 style="margin: 0; font-family: 'Roboto', Helvetica, Arial, sans-serif; font-size: 18px; color: #333333;">
                 Was this email useful to you? <a href="https://surveys.hotjar.com/36d58b75-c2f0-4ae3-a09c-2ee9a8613713"
-                  target="_blank" style="text-decoration:underline; color:#324FBE; margin: 0; border: 0">Tell us here</a></p>
+                  target="_blank" style="text-decoration:underline; color:#324FBE; margin: 0; border: 0">Tell us
+                  here</a></p>
             </td>
           </tr>
           <tr>
-            <td
-              style="padding: 20px 0 0;Margin:0;border-bottom:1px solid #cccccc;background:none;min-height:1px;width:100%;margin:0px;">
+            <td style="Margin:0;border-bottom:1px solid #cccccc;background:none;min-height:1px;width:100%;margin:0px;">
             </td>
           </tr>
           <tr>
@@ -400,45 +400,46 @@
               <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation"
                 style="background-color:#ffffff;">
                 <tr>
-                  <td width="33">
+                  <td align="center" style="padding: 20px 0;">
                     <a href="https://www.linkedin.com/company/hotjar/" target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/linkedin.png" alt="linkedin" title="linkedin" width="32" style="display: block;
-                      width: 32px;
-                      max-width: 100%;
-                      height: auto;
-                      border: 0;
-                      margin: 0;">
+                      <img src="./img/linkedin.png" alt="linkedin" title="linkedin" width="32">
                     </a>
-                  </td>
-                  <td width="33">
+
                     <a href="https://twitter.com/hotjar" target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/twitter.png" alt="twitter" title="twitter" width="32" style="display: block;
-                      width: 32px;
-                      max-width: 100%;
-                      height: auto;
-                      border: 0;
-                      margin: 0;">
+                      <img src="./img/twitter.png" alt="twitter" title="twitter" width="32">
+                    </a>
+
+                    <a href="https://www.youtube.com/channel/UC_B6JMm8IrO1JJxyx7hjR6A" target="_blank"
+                      style="margin: 0; border: 0;">
+                      <img src="./img/youtube.png" alt="youtube" title="youtube" width="32">
+                    </a>
+
+                    <a href="https://www.instagram.com/hotjar/" target="_blank" style=" margin: 0; border: 0;">
+                      <img src="./img/instagram.png" alt="instagram" title="instagram" width="32" border="0">
                     </a>
                   </td>
-                  <td width="33">
-                    <a href="https://www.youtube.com/channel/UC_B6JMm8IrO1JJxyx7hjR6A" target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/youtube.png" alt="youtube" title="youtube" width="32" style="display: block;
-                      width: 32px;
-                      max-width: 100%;
-                      height: auto;
-                      border: 0;
-                      margin: 0;">
-                    </a>
-                  </td>
-                  <td width="20">
-                    <a href="https://www.instagram.com/hotjar/" target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/instagram.png" alt="instagram" title="instagram" width="32" style="display: block;
-                      width: 32px;
-                      max-width: 100%;
-                      height: auto;
-                      border: 0;
-                      margin: 0;">
-                    </a>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation"
+                style="background-color:#ffffff;">
+                <tr>
+                  <td align="center" style="padding: 0 40px 30px;">
+                    <p style="font-family: 'Roboto', Helvetica, Arial, sans-serif; line-height: 14px;
+                        color: #333333; font-size: 12px; margin: 0;">If you don't want to receive this type of email
+                      from Hotjar, you can unsubscribe <a
+                        href="https://links.hotjar.com/e/encryptedUnsubscribe?_r=8755dbeabb9f4f088fc0fbee6f28efed&_s=857c963c740244d1a2516114e75c3ff3&_t=5D9FsUhXXVbeVz3XNEeUP0jG6Mcr_jrpIr5nK-9ZfI8MTFSDghbce2DU9XCQDbjtLwt-BiL75xnnsDQZLRbWHiN2t25lVlV24uNSuns8q2fqqflQmY3Ivs26bq-s_ly370sCcx0LVrqS3m3nx7gu57ZguXA-W-MuT9fmR42YyjM%3D"
+                        target="_blank" style="text-decoration: underline;
+                      color: #333333;
+                      font-size: 14px;">here</a>. To be removed from all our marketing messages, <a
+                        href="https://links.hotjar.com/e/encryptedUnsubscribe?_r=8755dbeabb9f4f088fc0fbee6f28efed&_s=857c963c740244d1a2516114e75c3ff3&_t=5D9FsUhXXVbeVz3XNEeUP0jG6Mcr_jrpIr5nK-9ZfI8MTFSDghbce2DU9XCQDbjtLwt-BiL75xnnsDQZLRbWHiN2t25lVlV24uNSuns8q2fqqflQmY3Ivs26bq-s_ly370sCcx0LVrqS3m3nx7gu57ZguXA-W-MuT9fmR42YyjM%3D"
+                        target="_blank" style="text-decoration: underline;
+                      color: #333333;
+                      font-size: 14px;">click here</a>.
+                    </p>
                   </td>
                 </tr>
               </table>
