--- a/index.html
+++ b/index.html
@@ -9,9 +9,48 @@
   <style type="text/css">
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
-    @media screen and (max-width: 599.98px) {}
+    @media screen and (min-width: 960px) {
+      .container {
+        width: 960px !important;
+      }
+      h2 {
+        font-size: 30px !important;
+      }
+      h3 {
+        font-size: 24px !important;
+      }
+      p {
+        font-size: 18px !important;
+      }
+      a {
+        font-size: 16px !important;
+      }
+      .header_logo {
+        width: 150px !important;
+      }
+      .header_img {
+        width: 100% !important;
+        height:100% !important;
+      }
+      .two-column {
+        width: 430px !important;
+      }
+      .hotjar_img {
+        width: 100% !important;
+      }
+      .two-column_img {
+        width: 100% !important;
+      }
+      .hotjar_social {
+        width: 40px !important;
+        height: 40px !important;
+      }
+      .footer_logo {
+        width: 30px !important;
+      }
+    }
 
-    @media screen and (max-width: 399.98px) {}
+    @media screen and (max-width: 600) {}
   </style>
 </head>
 
@@ -19,7 +58,7 @@
   <table width="100%" cellpadding="0" cellspacing="0" border="0" role="presentation" style="background-color:#ffffff;">
     <tr>
       <td>
-        <table width="600" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation"
+        <table width="600" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation" class="container"
           style=" background-color: #F8F9FC;">
           <tr>
             <td>
@@ -29,7 +68,7 @@
                   <td width="100%" align="center" style="padding: 10px 0 5px;">
                     <a href="https://insights.hotjar.com/login?utm_source=iterable&utm_medium=email&utm_campaign=headerlogo"
                       target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/header-logo.png" alt="hotjar" title="hotjar" width="100"
+                      <img src="./img/header-logo.png" alt="hotjar" title="hotjar" width="100" class="header_logo" 
                         style="display: block; width: 100px; max-width: 100%; height: auto; border: 0;">
                     </a>
                   </td>
@@ -60,7 +99,7 @@
                   <td align="center">
                     <a href="https://www.hotjar.com/updates/en?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
                       target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/header.png" alt="Main img" title="Main img"
+                      <img src="./img/header.png" alt="Main img" title="Main img" class="header_img"
                         style="display: block; width: 400px; max-width: 100%; height: auto; border: 0;">
                     </a>
                   </td>
@@ -93,7 +132,7 @@
                   <td width="50%" align="left">
                     <a href="https://www.hotjar.com/updates/en/stay-on-top-of-user-metrics-with-the-new-dashboard?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
                       target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/dashboard.png" alt="new dashboard" title="new dashboard" width="258"
+                      <img src="./img/dashboard.png" alt="new dashboard" title="new dashboard" width="258" class="hotjar_img"
                         style="display: block; width: 258px; max-width: 100%; border: 0;">
                     </a>
                   </td>
@@ -124,7 +163,7 @@
                   <td align="center">
                     <a href="https://www.hotjar.com/updates/en/choose-your-hotjar-adventure-with-workspaces?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
                       style="margin: 0; border: 0" target="_blank">
-                      <img src="./img/workspace.png" alt="Dedicated workspaces" title="Dedicated workspaces" width="540"
+                      <img src="./img/workspace.png" alt="Dedicated workspaces" title="Dedicated workspaces" width="540" class="hotjar_img"
                         style="display: block; width: 540px; max-width: 100%; height: auto; border: 0;">
                     </a>
                   </td>
@@ -157,7 +196,7 @@
                   <td width="50%" align="left">
                     <a href="https://www.hotjar.com/updates/en/see-exactly-what-your-users-see-with-the-latest-recordings-improvements?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
                       style="margin: 0; border: 0" target="_blank">
-                      <img src="./img/multi-tab.png" alt="multi-tab" title="multi-tab" width="258"
+                      <img src="./img/multi-tab.png" alt="multi-tab" title="multi-tab" width="258" class="hotjar_img"
                         style="display: block; width: 258px; max-width: 100%; border: 0;">
                     </a>
                   </td>
@@ -188,7 +227,7 @@
                   <td width="50%" align="left">
                     <a href="https://www.hotjar.com/updates/en/get-better-user-feedback-with-the-latest-improvements-in-hotjar-ask?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
                       target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/accessibility.png" alt="Ask improvements" title="Ask improvements" width="258"
+                      <img src="./img/accessibility.png" alt="Ask improvements" title="Ask improvements" width="258" class="hotjar_img"
                         style="display: block; width: 258px; max-width: 100%; border: 0;">
                     </a>
                   </td>
@@ -219,7 +258,7 @@
                   <td width="50%" align="left">
                     <a href="https://www.hotjar.com/updates/en/easily-manage-your-user-attributes-with-these-new-improvements?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
                       style="margin: 0; border: 0" target="_blank">
-                      <img src="./img/user-attribute.png" alt="multi-tab" title="multi-tab" width="258"
+                      <img src="./img/user-attribute.png" alt="multi-tab" title="multi-tab" width="258" class="hotjar_img"
                         style="display: block; width: 258px; max-width: 100%; border: 0;">
                     </a>
                   </td>
@@ -259,13 +298,13 @@
                       style="background-color:#ffffff; padding: 0 30px;">
                       <tr>
                         <td>
-                          <table width="260" align="left" cellpadding="0" cellspacing="0" border="0" role="presentation"
+                          <table width="260" align="left" cellpadding="0" cellspacing="0" border="0" role="presentation" class="two-column"
                             style="font-family: 'Roboto', Helvetica, Arial, sans-serif; background-color:#ffffff;">
                             <tr>
                               <td>
                                 <a href="https://learning.hotjar.com/courses/collaborating-with-your-team-using-highlights/?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
                                   target="_blank" style="margin: 0; border: 0">
-                                  <img src="./img/highlights.png"
+                                  <img src="./img/highlights.png" class="two-column_img"
                                     alt="Education course on Highlights and team collaboration"
                                     title="Education course on Highlights and team collaboration" width="260"
                                     style=" display: block; width: 260px; max-width: 100%; height: auto; border: 0;">
@@ -293,13 +332,13 @@
                           </table>
                         </td>
                         <td>
-                          <table width="260" align="left" cellpadding="0" cellspacing="0" border="0" role="presentation"
+                          <table width="260" align="left" cellpadding="0" cellspacing="0" border="0" role="presentation" class="two-column"
                             style="font-family: 'Roboto', Helvetica, Arial, sans-serif; background-color:#ffffff;">
                             <tr>
                               <td>
                                 <a href="https://www.hotjar.com/hotjar-for-teams/watch-party/?utm_source=iterable&utm_medium=email&utm_campaign=june-pru"
                                   target="_blank">
-                                  <img src="./img/watch-party.png" alt="New guide" title="New guide" width="260"
+                                  <img src="./img/watch-party.png" alt="New guide" title="New guide" width="260" class="two-column_img"
                                     style=" display: block; width: 260px; max-width: 100%; height: auto; border: 0;">
                                 </a>
                               </td>
@@ -356,7 +395,7 @@
                   <td align="center" style="padding: 20px 0">
                     <a href="https://www.hotjar.com/?utm_source=iterable&utm_medium=email&utm_campaign=footerlogo"
                       target="_blank" style="margin: 0; border: 0">
-                      <img src="./img/footer-logo.png" alt="hothar" title="hotjar" width="22" style="display: block;
+                      <img src="./img/footer-logo.png" alt="hothar" title="hotjar" width="22" class="footer_logo" style="display: block;
                       width: 22px;
                       max-width: 100%;
                       height: auto;
@@ -405,7 +444,7 @@
                       <td style="width: 72px;">
                         <a href="https://www.linkedin.com/company/hotjar/" target="_blank"
                           style="margin: 0; text-decoration: none;">
-                          <img src="./img/linkedin.png" alt="linkedin" title="linkedin" width="32" style="
+                          <img src="./img/linkedin.png" alt="linkedin" title="linkedin" width="32" class="hotjar_social" style="
                           margin: 0;
                           display: inline-block;
                           width: 32px;
@@ -417,7 +456,7 @@
     
                       <td style="width: 72px;">
                         <a href=" https://twitter.com/hotjar" target="_blank" style="margin: 0; text-decoration: none;">
-                          <img src="./img/twitter.png" alt="twitter" title="twitter" width="32" style="
+                          <img src="./img/twitter.png" alt="twitter" title="twitter" width="32" class="hotjar_social" style="
                           margin: 0;
                           display: inline-block;
                           width: 32px;
@@ -430,7 +469,7 @@
                       <td style="width: 72px;"">
                         <a href="https://www.youtube.com/channel/UC_B6JMm8IrO1JJxyx7hjR6A" target="_blank"
                           style="margin: 0; text-decoration: none;">
-                          <img src="./img/youtube.png" alt="youtube" title="youtube" width="32" style="
+                          <img src="./img/youtube.png" alt="youtube" title="youtube" width="32" class="hotjar_social" style="
                           margin: 0;
                           display: inline-block;
                           width: 32px;
@@ -443,7 +482,7 @@
                       <td style="width: 72px;">
                         <a href=" https://www.instagram.com/hotjar/" target="_blank"
                           style=" margin: 0;text-decoration: none;">
-                          <img src="./img/instagram.png" alt="instagram" title="instagram" width="32" style="
+                          <img src="./img/instagram.png" alt="instagram" title="instagram" width="32" class="hotjar_social" style="
                           margin: 0;
                           display: inline-block;
                           width: 32px;
