--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                               </td>
                             </tr>
                           </table>
-                          <table width="260" align="left" cellpadding="0" cellspacing="0" border="0" role="presentation"
+                          <table width="260" align="right" cellpadding="0" cellspacing="0" border="0" role="presentation"
                             class="two-column" style="background-color:#ffffff;">
                             <tr>
                               <td>
