--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
       p {
         font-size: 18px !important;
+        line-height: 24px !important;
       }
 
       a {
@@ -119,7 +120,7 @@
                 <tr>
                   <td width="100%" align="center" style="padding: 10px 0 5px;"><a
                       href="https://insights.hotjar.com/login?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=headerlogo"
-                      target="_blank" style="margin: 0; border: 0"><img src="./img/header-logo.png" alt="hotjar"
+                      target="_blank" style="margin: 0; border: 0"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/bca4e841-661d-fd65-dc56-60f347bb721d.png" alt="hotjar"
                         title="hotjar" width="100" class="header_logo"
                         style="display: block; width: 100px; max-width: 100%; height: auto; border: 0;"></a></td>
                 </tr>
@@ -144,7 +145,7 @@
                 <tr>
                   <td align="center"><a
                       href="https://www.hotjar.com/updates/en?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=june-pru"
-                      target="_blank" style="margin: 0; border: 0"><img src="./img/header.png" alt="Main img"
+                      target="_blank" style="margin: 0; border: 0"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/f8c5f124-acad-5f82-ef18-8dbce5c344a0.png" alt="Main img"
                         title="Main img" class="header_img"
                         style="display: block; width: 400px; max-width: 100%; height: auto; border: 0;"></a></td>
                 </tr>
@@ -178,16 +179,16 @@
                       <tr>
                         <td>
                           <a href="https://www.hotjar.com/updates/en/stay-on-top-of-user-metrics-with-the-new-dashboard?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=june-pru"
-                            target="_blank" style="margin: 0; border: 0"><img src="./img/dashboard.png"
+                            target="_blank" style="margin: 0; border: 0"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/703191fe-c762-23e0-bf2a-dad79f9bf916.png"
                               alt="new dashboard" title="new dashboard" width="258" class="hotjar_img"
                               style="display: block; width: 258px; max-width: 100%; border: 0;"></a>
                         </td>
                       </tr>
                     </table>
                     <table width="50%" align="left" class="right" cellpadding="0" cellspacing="0" border="0"
-                      role="presentation" style=" padding: 0 0 20px 10px; background-color:#ffffff;">
+                      role="presentation" style="background-color:#ffffff;">
                       <tr>
-                        <td style="font-family: 'Roboto', Helvetica, Arial, sans-serif; margin: 0;">
+                        <td style="font-family: 'Roboto', Helvetica, Arial, sans-serif; margin: 0; padding-left: 20px;">
                           <h3 style="margin: 0; font-size: 18px;">Dashboard: user insights in one place</h3>
                           <p style=" font-size: 14px; color: #696969; line-height: 22px; margin: 5px 0 10px">Get a
                             high-level
@@ -214,7 +215,7 @@
                 <tr>
                   <td align="center"><a
                       href="https://www.hotjar.com/updates/en/choose-your-hotjar-adventure-with-workspaces?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=june-pru"
-                      style="margin: 0; border: 0" target="_blank"><img src="./img/workspace.png"
+                      style="margin: 0; border: 0" target="_blank"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/5620e6c6-320f-e90c-04d9-aad97bb465dd.png"
                         alt="Dedicated workspaces" title="Dedicated workspaces" width="540" class="hotjar_img"
                         style="display: block; width: 540px; max-width: 100%; height: auto; border: 0;"></a></td>
                 </tr>
@@ -246,7 +247,7 @@
                       <tr>
                         <td>
                           <a href="https://www.hotjar.com/updates/en/see-exactly-what-your-users-see-with-the-latest-recordings-improvements?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=june-pru"
-                            style="margin: 0; border: 0" target="_blank"><img src="./img/multi-tab.png" alt="multi-tab"
+                            style="margin: 0; border: 0" target="_blank"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/ed2a23c8-f6f9-2314-1a15-bd796a958ac1.png" alt="multi-tab"
                               title="multi-tab" width="258" class="hotjar_img"
                               style="display: block; width: 258px; max-width: 100%; border: 0;"></a>
                         </td>
@@ -254,7 +255,7 @@
                     </table>
                     <table width="50%" class="right" style="font-family: 'Roboto', Helvetica, Arial, sans-serif;">
                       <tr>
-                        <td>
+                        <td style="padding-left: 20px;">
                           <h3 style="margin: 0; padding:  0 0 10px;">Recordings improvements &amp; multi-tab support
                           </h3>
                           <p style=" font-size: 14px; color: #696969; line-height: 22px; margin: 0; padding: 5px 0-;">
@@ -287,7 +288,7 @@
                       <tr>
                         <td>
                           <a href="https://www.hotjar.com/updates/en/get-better-user-feedback-with-the-latest-improvements-in-hotjar-ask?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=june-pru"
-                            target="_blank" style="margin: 0; border: 0"><img src="./img/accessibility.png"
+                            target="_blank" style="margin: 0; border: 0"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/a411edd9-5450-83f4-936e-3d73ad47c334.png"
                               alt="Ask improvements" title="Ask improvements" width="258" class="hotjar_img"
                               style="display: block; width: 258px; max-width: 100%; border: 0;"></a>
                         </td>
@@ -296,7 +297,7 @@
                     <table width="50%" class="right" cellpadding="0" cellspacing="0" border="0" role="presentation"
                       style="font-family: 'Roboto', Helvetica, Arial, sans-serif;">
                       <tr>
-                        <td>
+                        <td style="padding-left: 20px;">
                           <h3 style="margin: 0; padding: 0 0 5px;">Ask: customization &amp; improved accessibility</h3>
                           <p style=" font-size: 14px; color: #696969; line-height: 22px; margin: 0; padding: 5px 0;">
                             Customize feedback
@@ -327,7 +328,7 @@
                       <tr>
                         <td>
                           <a href="https://www.hotjar.com/updates/en/easily-manage-your-user-attributes-with-these-new-improvements?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=june-pru"
-                            style="margin: 0; border: 0" target="_blank"><img src="./img/user-attribute.png"
+                            style="margin: 0; border: 0" target="_blank"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/233b9ed1-0cca-3fab-189a-7799c0ac6115.png"
                               alt="multi-tab" title="multi-tab" width="258" class="hotjar_img"
                               style="display: block; width: 258px; max-width: 100%; border: 0;"></a>
                         </td>
@@ -336,7 +337,7 @@
                     <table width="50%" class="right" cellpadding="0" cellspacing="0" border="0" role="presentation"
                       style="font-family: 'Roboto', Helvetica, Arial, sans-serif;">
                       <tr>
-                        <td>
+                        <td style="padding-left: 20px;">
                           <h3 style="margin: 0; padding: 0 0 5px;">Easier User Attribute management</h3>
                           <p style=" font-size: 14px; color: #696969; line-height: 22px; margin: 0; padding: 5px 0;">
                             Delete out-of-date
@@ -377,7 +378,7 @@
                                   <tr>
                                     <td><a
                                         href="https://learning.hotjar.com/courses/collaborating-with-your-team-using-highlights/?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=june-pru"
-                                        target="_blank" style="margin: 0; border: 0"><img src="./img/highlights.png"
+                                        target="_blank" style="margin: 0; border: 0"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/184f702c-0f56-f4e8-38a2-45c51a93546a.png"
                                           class="two-column_img"
                                           alt="Education course on Highlights and team collaboration"
                                           title="Education course on Highlights and team collaboration" width="260"
@@ -416,7 +417,7 @@
                                   <tr>
                                     <td><a
                                         href="https://www.hotjar.com/hotjar-for-teams/watch-party/?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=june-pru"
-                                        target="_blank"><img src="./img/watch-party.png" alt="New guide"
+                                        target="_blank"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/86007e25-905e-c116-6478-e1c6953a2ab6.png" alt="New guide"
                                           title="New guide" width="260" class="two-column_img"
                                           style=" display: block; width: 260px; max-width: 100%; height: auto; border: 0;"></a>
                                     </td>
@@ -483,7 +484,7 @@
                 <tr>
                   <td align="center" style="padding: 20px 0"><a
                       href="https://www.hotjar.com/?utm_source=iterable&amp;utm_medium=email&amp;utm_campaign=footerlogo"
-                      target="_blank" style="margin: 0; border: 0"><img src="./img/footer-logo.png" alt="hothar"
+                      target="_blank" style="margin: 0; border: 0"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/1b949fcf-8569-2d58-2f9a-73076ac62bad.png" alt="hothar"
                         title="hotjar" width="22" class="footer_logo"
                         style="display: block; width: 22px; max-width: 100%; height: auto; border: 0; margin: 0;"></a>
                   </td>
@@ -524,22 +525,22 @@
                 <tr>
                   <td></td>
                   <td style="width: 72px;"><a href="https://www.linkedin.com/company/hotjar/" target="_blank"
-                      style="margin: 0; text-decoration: none;"><img src="./img/linkedin.png" alt="linkedin"
+                      style="margin: 0; text-decoration: none;"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/418d4fad-af7b-d24e-f938-f6de36a54d88.png" alt="linkedin"
                         title="linkedin" width="32" class="hotjar_social"
                         style=" margin: 0; display: inline-block; width: 32px; height: 32px; max-width: 100%; border: 0;"></a>
                   </td>
                   <td style="width: 72px;"><a href="%20https://twitter.com/hotjar" target="_blank"
-                      style="margin: 0; text-decoration: none;"><img src="./img/twitter.png" alt="twitter"
+                      style="margin: 0; text-decoration: none;"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/d04cddcf-d7bf-7e75-e1ff-a63665ace289.png" alt="twitter"
                         title="twitter" width="32" class="hotjar_social"
                         style=" margin: 0; display: inline-block; width: 32px; height: 32px; max-width: 100%; border: 0;"></a>
                   </td>
                   <td style="width: 72px;"><a href="%20https://www.youtube.com/channel/UC_B6JMm8IrO1JJxyx7hjR6A"
-                      target="_blank" style="margin: 0; text-decoration: none;"><img src="./img/youtube.png"
+                      target="_blank" style="margin: 0; text-decoration: none;"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/3183a1a7-8dd6-9ed0-b38a-aab54802b30b.png"
                         alt="youtube" title="youtube" width="32" class="hotjar_social"
                         style=" margin: 0; display: inline-block; width: 32px; height: 32px; max-width: 100%; border: 0;"></a>
                   </td>
                   <td style="width: 72px;"><a href="%20https://www.instagram.com/hotjar/" target="_blank"
-                      style=" margin: 0;text-decoration: none;"><img src="./img/instagram.png" alt="instagram"
+                      style=" margin: 0;text-decoration: none;"><img src="https://mcusercontent.com/d7f5ddea78f306ae73fdf52a5/images/44331c17-dfad-f868-86fb-e0ffdc3c8f79.png" alt="instagram"
                         title="instagram" width="32" class="hotjar_social"
                         style=" margin: 0; display: inline-block; width: 32px; height: 32px; max-width: 100%; border: 0;"></a>
                   </td>
